[package]
name = "simple-rust-agent"
version = "0.1.0"
edition = "2024"
description = "A simple ai agent built on rust with rig and qdrant."
authors = ["iamprecieee <emmypresh777@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[[bin]]
name = "agent"
path = "src/main.rs"

[lib]
name = "agent"
path = "src/lib.rs"
