[package]
name = "simple-rust-agent"
version = "0.1.0"
edition = "2024"
description = "A simple AI agent built in Rust using the rig library."
authors = ["iamprecieee <emmypresh777@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
colorized = "1.0.0"
dotenvy = "0.15.7"
futures = "0.3.32"
rig-core = "0.31.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[[bin]]
name = "agent"
path = "src/main.rs"

[lib]
name = "agent"
path = "src/lib.rs"
